# insta360-auto-converter

./: .env.example  .gitignore  Dockerfile  FIXES_APPLIED.md  MODE_WATCH_GUIDE.md  README.md  SYNOLOGY_SETUP.md  USAGE_GUIDE.md  WSL_SETUP.md  analyze-exif.sh  config.json  docker-compose-watch.yml  docker-compose-wsl.yml  docker-compose.yml  start-batch-wsl.bat  start-batch-wsl.sh  start-batch.bat  start-batch.ps1  start.sh  validate_sdk.ps1  validate_sdk.sh
app/: CMakeLists.txt  batch_processor.cpp  exif_metadata.cpp  exif_metadata.h  main.cpp  resolution_detector.cpp  resolution_detector.h
config/: config.json
